# nvme_device

./: CLAUDE.md  CMakeLists.txt  README.md
examples/: basic_io.cpp
include/: nvme_device.h  nvme_namespace.h  nvme_types.h
src/: nvme_device.cpp
tests/: test_nvme_device.cpp
